revise wishlist to be connected with likes
